include/dss_capi.h

    /*!  
    Function types for plotting and writing/message callbacks. 
    Receives a string that contains the JSON-encoded parameters.
    
    EXPERIMENTAL
    */
    typedef int32_t (*dss_callback_plot_t)(void* ctx, char* jsonParams);
    typedef int32_t (*dss_callback_message_t)(void* ctx, char* messageStr, int32_t messageType, int64_t messageSize, int32_t messageSubType);
    typedef void (*dss_callback_solution_t)(void* ctx);
    DSS_CAPI_DLL void DSS_RegisterPlotCallback(dss_callback_plot_t cb);
    DSS_CAPI_DLL void DSS_RegisterMessageCallback(dss_callback_message_t cb);
    /*! Functions to register and unregister callbacks for the solution events (DSSEvents in COM) */
    DSS_CAPI_DLL uint16_t DSSEvents_RegisterInitControls(dss_callback_solution_t cb);
    DSS_CAPI_DLL uint16_t DSSEvents_RegisterCheckControls(dss_callback_solution_t cb);
    DSS_CAPI_DLL uint16_t DSSEvents_RegisterStepControls(dss_callback_solution_t cb);
    DSS_CAPI_DLL uint16_t DSSEvents_UnregisterInitControls(dss_callback_solution_t cb);
    DSS_CAPI_DLL uint16_t DSSEvents_UnregisterCheckControls(dss_callback_solution_t cb);
    DSS_CAPI_DLL uint16_t DSSEvents_UnregisterStepControls(dss_callback_solution_t cb);
    DSS_CAPI_DLL void DSS_NewCircuit(const char* Value);
    /*! 
    Number of Circuits currently defined
    */
    DSS_CAPI_DLL int32_t DSS_Get_NumCircuits(void);
    DSS_CAPI_DLL void DSS_ClearAll(void);
    /*! 
    Get version string for the DSS.
    */
    DSS_CAPI_DLL char* DSS_Get_Version(void);
    /*! 
    Runs potential initialization of internal structures of the DSS engine.
    
    For DSS-Extensions, users are required to call this function at least
    once per process, especially in multi-threaded applications.

    Returns 0/false on failure. A failure might indicate an incompatibility between
    the Pascal threading system and the host process.
    */
    DSS_CAPI_DLL uint16_t DSS_Start(int32_t code);
    /*! 
    List of DSS intrinsic classes (names of the classes)
    */
    DSS_CAPI_DLL void DSS_Get_Classes(char*** ResultPtr, int32_t* ResultCount);
    /*! 
    Same as DSS_Get_Classes but using the global buffer interface for results
    */
    DSS_CAPI_DLL void DSS_Get_Classes_GR(void);
    /*! 
    List of user-defined classes
    */
    DSS_CAPI_DLL void DSS_Get_UserClasses(char*** ResultPtr, int32_t* ResultCount);
    /*! 
    Same as DSS_Get_UserClasses but using the global buffer interface for results
    */
    DSS_CAPI_DLL void DSS_Get_UserClasses_GR(void);
    /*! 
    Number of DSS intrinsic classes
    */
    DSS_CAPI_DLL int32_t DSS_Get_NumClasses(void);
    /*! 
    Number of user-defined classes
    */
    DSS_CAPI_DLL int32_t DSS_Get_NumUserClasses(void);
    /*! 
    DSS Data File Path.  Default path for reports, etc. from DSS
    */
    DSS_CAPI_DLL char* DSS_Get_DataPath(void);
    /*! 
    DSS Data File Path.  Default path for reports, etc. from DSS
    */
    DSS_CAPI_DLL void DSS_Set_DataPath(const char* Value);
    DSS_CAPI_DLL void DSS_Reset(void);
    /*! 
    Returns the path name for the default text editor.
    */
    DSS_CAPI_DLL char* DSS_Get_DefaultEditor(void);
    DSS_CAPI_DLL int32_t DSS_SetActiveClass(const char* ClassName);
    DSS_CAPI_DLL uint16_t DSS_Get_AllowForms(void);
    DSS_CAPI_DLL void DSS_Set_AllowForms(uint16_t Value);
    /*! 
    Sets/gets the AllowEditor mode.

    AllowEditor controls whether the external editor is used in commands like "Show".
    If you set to 0 (false), the editor is not executed. Note that other side effects,
    such as the creation of files, are not affected.
    */
    DSS_CAPI_DLL uint16_t DSS_Get_AllowEditor(void);
    DSS_CAPI_DLL void DSS_Set_AllowEditor(uint16_t Value);
    /*! 
    LegacyModels was a flag used to toggle legacy (pre-2019) models for PVSystem, InvControl, Storage and
    StorageControl.
    In the official OpenDSS version 9.0, the old models were removed. They were temporarily present here
    but were also removed in DSS C-API v0.13.0.
        
    NOTE: this function pair will be removed for v1.0. It is left to avoid breaking the current API too soon.
    
    (API Extension)
    */
    DSS_CAPI_DLL uint16_t DSS_Get_LegacyModels(void);
    DSS_CAPI_DLL void DSS_Set_LegacyModels(uint16_t Value);
    /*! 
    If enabled, the DOScmd command is allowed. Otherwise, an error is reported if the user tries to use it.
    
    Defaults to False/0 (disabled state). Users should consider DOScmd deprecated on DSS-Extensions.
    
    This can also be set through the environment variable DSS_CAPI_ALLOW_DOSCMD. Setting it to 1 enables
    the command.
    
    (API Extension)
    */
    DSS_CAPI_DLL uint16_t DSS_Get_AllowDOScmd(void);
    DSS_CAPI_DLL void DSS_Set_AllowDOScmd(uint16_t Value);
    /*! 
    If disabled, the engine will not change the active working directory during execution. E.g. a "compile"
    command will not "chdir" to the file path.
    
    If you have issues with long paths, enabling this might help in some scenarios.
    
    Defaults to True (allow changes, backwards compatible) in the 0.12.x versions of DSS C-API. 
    This might change to false in future versions.
    
    This can also be set through the environment variable DSS_CAPI_ALLOW_CHANGE_DIR. Setting it to 0 to
    disallow changing the active working directory.
    
    (API Extension)
    */
    DSS_CAPI_DLL uint16_t DSS_Get_AllowChangeDir(void);
    DSS_CAPI_DLL void DSS_Set_AllowChangeDir(uint16_t Value);
    
    /*! 
    If enabled, the engine will fill the array dimensions as the third and forth elements of 
    the "count" pointer (first elements is the current size, second is the capacity). For user-managed
    memory, the user must provide a valid "count" pointer with the correct capacity.

    Most matrices from the DSS engine are column-major (a.k.a. "Fortran order").

    If the array is not a matrix, the elements are left as zeroes, i.e. the current size can be used as 
    the dimension of the vector.
    For complex matrices, the sizes are referred to the number of complex elements, not the primary the float64 elements.

    Defaults to False/0 in the 0.13.x versions of DSS C-API. 
    This might change to false in future versions.

    (API Extension)
    */
    DSS_CAPI_DLL uint16_t DSS_Get_EnableArrayDimensions(void);
    DSS_CAPI_DLL void DSS_Set_EnableArrayDimensions(uint16_t Value);
    /*! 
    Controls some compatibility flags introduced to toggle some behavior from the official OpenDSS.
    The current bit flags are listed in the enum description.

    The flags may change for each version of DSS C-API, but the same value will not be reused. That is,
    when we remove a compatibility flag, it will have no effect but will also not affect anything else
    besides raising an error if the user tries to toggle a flag that was available in a previous version.

    We expect to keep a very limited number of flags. Since the flags are more transient than the other
    options/flags, it was preferred to add this generic function instead of a separate function per
    flag.

    **These flags are global**, affecting any DSS context in the process.

    Related enumeration: DSSCompatFlags

    (API Extension)
    */
    DSS_CAPI_DLL uint32_t DSS_Get_CompatFlags(void);
    DSS_CAPI_DLL void DSS_Set_CompatFlags(uint32_t Value);
    /*! 
    If enabled, in case of errors or empty arrays, the API returns arrays with values compatible with the 
    official OpenDSS COM interface. 
    
    For example, consider the function Loads_Get_ZIPV. If there is no active circuit or active load element:
    - In the disabled state (COMErrorResults=False), the function will return "[]", an array with 0 elements.
    - In the enabled state (COMErrorResults=True), the function will return "[0.0]" instead. This should
      be compatible with the return value of the official COM interface.
    
    Defaults to True/1 (enabled state) in the v0.13.x series. This will change to false in future series.
    
    This can also be set through the environment variable DSS_CAPI_COM_DEFAULTS. Setting it to 0 disables
    the legacy/COM behavior. The value can be toggled through the API at any time.
    
    (API Extension)
    */
    DSS_CAPI_DLL uint16_t DSS_Get_COMErrorResults(void);
    DSS_CAPI_DLL void DSS_Set_COMErrorResults(uint16_t Value);